--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "chart.js": "^4.3.2",
     "core-js": "^3.8.3",
+    "jquery": "^3.7.0",
+    "popper.js": "^1.16.1",
+    "sweetalert2": "^11.7.20",
     "vue": "^3.2.13",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
